--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="brand" href="<%=root_path%>"><%= image_tag"logo.png", :id=>"logo"%></a>
+      <a class="brand" href="<%=rwww.onlinrvotingsystem.net%>"><%= image_tag"logo.png", :id=>"logo"%></a>
       <div class="nav-collapse collapse">
         <ul class="nav leftbar">
           <li class="active"><%=link_to "Home", root_path%></li>                
